learning/05-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-ingress
  namespace: incident-platform

  labels:
    app.kubernetes.io/name: hello
    app.kubernetes.io/part-of: incident-platform
    environment: local

spec:
  # Cette classe indique que cet Ingress doit être pris en charge
  # par l'Ingress Controller NGINX.
  ingressClassName: nginx

  rules:
    # Nom de domaine local utilisé depuis le navigateur.
    - host: hello.localhost

      http:
        paths:
          # Toutes les requêtes commençant par / seront envoyées
          # vers le Service hello-service.
          - path: /
            pathType: Prefix

            backend:
              service:
                name: hello-service

                port:
                  number: 80
